# VoiceActivity

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
tests/: test_voice_activity.py
voice_activity/: __init__.py  __main__.py  abc.py  bot.py  config.py  utility.py
voice_activity/commands/: __init__.py  abc.py  help.py  sub.py
voice_activity/modules/: __init__.py  default_modules.py  storage.py  sub.py  time_count.py
voice_activity/tinydb_defaultdict/: __init__.py
voice_activity/tinydb_exts/: defaultdict.py
